# AnisotroPy

./: .gitignore  CITATION.cff  README.md  anisotropy.yml  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/: CONTRIBUTING.md  CONTRIBUTORS.md
.github/workflows/: build_wheels.yml
anisotropy/: __init__.py  util.py
anisotropy/effective_modelling/: __init__.py  backus.py  hudson.py  n_layers.py  tandon_weng.py
anisotropy/materials/: __init__.py  core.py  database.py
anisotropy/splitting/: __init__.py
anisotropy/splitting/core/: __init__.py  lib.py  libnames.py
anisotropy/splitting/core/src/: anisotropy.c  anisotropylib.def  anisotropylib.h
anisotropy/utils/: __init__.py  core.py  errors.py  util.py
docs/: conf.py  index.rst  installation.rst  modules.rst  requirements.txt  sourcecode.rst  tutorials.rst
docs/submodules/: anisotropy.effective_modelling.rst  anisotropy.materials.rst  anisotropy.splitting.rst  anisotropy.util.rst
docs/tutorials/: material_class.rst  material_mixing.rst  materials_background.rst
tests/: test_materials.py
