[build-system]
requires = ["wheel", "setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anisotropy"
version = "0.0.1"
description = "AnisotroPy—a Python toolkit for the study of seismic anisotropy."
readme = "README.md"
license = {text = "GPLv3"}
requires-python = ">=3.8"
authors = [
    {name = "Conor Bacon", email = "cbacon@ldeo.columbia.edu"}
]
maintainers = [
    {name = "Conor Bacon", email = "cbacon@ldeo.columbia.edu"}
]
keywords = ["seismology", "seismic anisotropy", "shear wave splitting", "signal processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "matplotlib",
    "mplstereonet",
    "numpy",
]

[tool.setuptools.packages.find]
include = ["anisotropy*"]

[project.optional-dependencies]
development = ["black", "ipython"]
docs = ["Sphinx >= 1.8.1", "docutils"]

[project.urls]
GitHub = "https://github.com/hemmelig/AnisotroPy"
Documentation = "https://seismicanisotropy.readthedocs.io/en/latest"
Issues = "https://github.com/hemmelig/AnisotroPy/issues"

[tool.black]
line-length = 86
